--- a/src/css/containers/main-header.css
+++ b/src/css/containers/main-header.css
@@ -2,8 +2,9 @@
     display: flex;
     align-items: center;
     justify-content: space-between;
+    padding: var(--gap-smaller) var(--gap-medium) 0;
 }
 
-.main-header > .main-logo {
+.main-header>.main-logo {
     font-size: 20px;
 }
